--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "guzzlehttp/guzzle": "^7.0",
         "illuminate/support": "^8.0",
         "ext-json": "*"
@@ -48,7 +48,7 @@
                 "Puntodev\\Payments\\MercadoPagoServiceProvider"
             ],
             "aliases": {
-                "MercadoPago": "Puntodev\\Payments\\MercadoPagoFacade"
+                "MercadoPago": "Puntodev\\Payments\\Facades\\MercadoPagoFacade"
             }
         }
     }
