--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,13 @@
         "ext-json": "*"
     },
     "require-dev": {
+        "nunomaduro/collision": "^5.4",
         "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.4"
     },
     "autoload": {
         "psr-4": {
-            "Puntodev\\Payments\\": "src"
+            "Puntodev\\MercadoPago\\": "src"
         }
     },
     "autoload-dev": {
@@ -45,10 +46,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Puntodev\\Payments\\MercadoPagoServiceProvider"
+                "Puntodev\\MercadoPago\\MercadoPagoServiceProvider"
             ],
             "aliases": {
-                "MercadoPago": "Puntodev\\Payments\\Facades\\MercadoPagoFacade"
+                "MercadoPago": "Puntodev\\MercadoPago\\Facades\\MercadoPago"
             }
         }
     }
