--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.0/phpunit.xsd" colors="true"
-         cacheDirectory=".phpunit.cache">
-    <testsuites>
-        <testsuite name="Test Suite">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-    <logging>
-        <junit outputFile="./.tmp/test-results/logfile.xml"/>
-        <testdoxHtml outputFile="./.tmp/test-results/testdox.html"/>
-    </logging>
-    <php>
-        <env name="SANDBOX_GATEWAYS" value="true"/>
-    </php>
-    <coverage>
-        <include>
-            <directory suffix=".php">src</directory>
-        </include>
-        <report>
-            <html outputDirectory="./.tmp/test-results/coverage" lowUpperBound="35" highLowerBound="70"/>
-            <php outputFile="./.tmp/test-results/coverage.serialized"/>
-        </report>
-    </coverage>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd" colors="true" cacheDirectory=".phpunit.cache">
+  <testsuites>
+    <testsuite name="Test Suite">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
+  <logging>
+    <junit outputFile="./.tmp/test-results/logfile.xml"/>
+    <testdoxHtml outputFile="./.tmp/test-results/testdox.html"/>
+  </logging>
+  <php>
+    <env name="SANDBOX_GATEWAYS" value="true"/>
+  </php>
+  <coverage>
+    <report>
+      <html outputDirectory="./.tmp/test-results/coverage" lowUpperBound="35" highLowerBound="70"/>
+      <php outputFile="./.tmp/test-results/coverage.serialized"/>
+    </report>
+  </coverage>
+  <source>
+    <include>
+      <directory suffix=".php">src</directory>
+    </include>
+  </source>
 </phpunit>
