Support PHP 8.3 and greater

--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
         }
     ],
     "require": {
-        "php": "^8.3",
-        "guzzlehttp/guzzle": "^7.9",
-        "illuminate/support": "^12.14",
+        "php": ">=8.3 <9.0",
+        "guzzlehttp/guzzle": "^7.10",
+        "illuminate/support": "^12.37",
         "ext-json": "*"
     },
     "require-dev": {
         "nunomaduro/collision": "^8.8",
-        "orchestra/testbench": "^10.3",
-        "phpunit/phpunit": "^11.1"
+        "orchestra/testbench": "^10.6",
+        "phpunit/phpunit": "^11.4"
     },
     "autoload": {
         "psr-4": {
